jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;


// Tipos de dados

typedef void (*AbreCupomCallback) (PCHAR CPF_CNPJ,PCHAR Nome,PCHAR Endereco);


typedef void (*BobinaAdicionaLinhasCallback) (PCHAR linhas,PCHAR operacao);


typedef void (*ChangeEstadoCallback) (int EstadoAnterior,int EstadoAtual);


typedef BOOL (*ChequeEstadoCallback) (int EstadoAtual);


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	char FormaPagamento[4];
	double Total;
	int Contador;
} ComprovanteNaoFiscalRec;


typedef void (*EfetuaPagamentoCallback) (PCHAR CodFormaPagto,double Valor,PCHAR Observacao,BOOL ImprimeVinculado);


typedef void (*FechaCupomCallback) (PCHAR Observacao,int IndiceBMP);


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	double Total;
	double Data;
	char TipoDoc[30];
} FormaPagamentoRec;


typedef PCHAR (*GetKeyCallback) (void);


typedef void (*IntArgumentCallback) (int value);


typedef void (*NoArgumentCallback) (void);


typedef BOOL (*OnErrorCallback) (void);


typedef BOOL (*OnErrorRelatorioCallback) (int Indice);


typedef BOOL (*OnMsgRetentarCallback) (PCHAR Mensagem,PCHAR Situacao);


typedef void (*SangriaSuprimentoCallback) (double Valor,PCHAR Obs,PCHAR DescricaoCNF,PCHAR DescricaoFPG);


typedef void (*StringCallback) (PCHAR Mensagem);


typedef void (*SubtotalizaCupomCallback) (double DescontoAcrescimo,PCHAR MensagemRodape);


typedef void (*VendeItemCallback) (PCHAR Codigo,PCHAR Descricao,PCHAR AliquotaICMS,double Qtd,double ValorUnitario,double ValorDescontoAcrescimo,PCHAR Unidade,PCHAR TipoDescontoAcrescimo,PCHAR DescontoAcrescimo);



// Funções

DllImport int ECF_AbreCupom(const INTPTR ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco, const BOOL ModoPreVenda);

DllImport int ECF_AbreCupomVinculado(const INTPTR ecfHandle, const PCHAR coo, const PCHAR codFormaPagto, const double valor);

DllImport int ECF_AbreCupomVinculadoCNF(const INTPTR ecfHandle, const PCHAR coo, const PCHAR codFormaPagto, const PCHAR codComprovanteNaoFiscal, const double valor);

DllImport int ECF_AbreGaveta(const INTPTR ecfHandle);

DllImport int ECF_AbreNaoFiscal(const INTPTR ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco);

DllImport int ECF_AbreRelatorioGerencial(const INTPTR ecfHandle, const int indice);

DllImport int ECF_AchaCNFDescricao(const INTPTR ecfHandle, ComprovanteNaoFiscalRec* comprovanteNaoFiscal, const PCHAR descricao, const BOOL busca, const BOOL ignore);

DllImport int ECF_AchaFPGDescricao(const INTPTR ecfHandle, const PCHAR descricao, const BOOL buscaexata, const BOOL ignorecase, FormaPagamentoRec* formaPagamento);

DllImport int ECF_AchaFPGIndice(const INTPTR ecfHandle, const PCHAR indice, FormaPagamentoRec* formaPagamento);

DllImport int ECF_AcharECF(const INTPTR ecfHandle, const BOOL Modelo, const BOOL Porta, const int TimeOut);

DllImport int ECF_AcharPorta(const INTPTR ecfHandle, const int TimeOut);

DllImport int ECF_ArquivoMFD_DLL(const INTPTR ecfHandle, const double DaTaInicial, const double DaTaFinal, const PCHAR Arquivo, const int Documentos[], const int QTD_DOC, const int Finalidade);

DllImport int ECF_ArquivoMFD_DLL_COO(const INTPTR ecfHandle, const int COOInicial, const int COOFinal, const PCHAR Arquivo, const int Documentos[], const int QTD_DOC, const int Finalidade, const int TipoContador);

DllImport int ECF_Ativar(const INTPTR ecfHandle);

DllImport int ECF_CancelaCupom(const INTPTR ecfHandle);

DllImport int ECF_CancelaDescontoAcrescimoItem(const INTPTR ecfHandle, const int numItem);

DllImport int ECF_CancelaDescontoAcrescimoSubTotal(const INTPTR ecfHandle, const char tipoAcrescimoDesconto);

DllImport int ECF_CancelaImpressaoCheque(const INTPTR ecfHandle);

DllImport int ECF_CancelaItemVendido(const INTPTR ecfHandle, const int numItem);

DllImport int ECF_CancelaItemVendidoParcial(const INTPTR ecfHandle, const int numItem, const double quantidade);

DllImport int ECF_CancelaNaoFiscal(const INTPTR ecfHandle);

DllImport int ECF_CarregaAliquotas(const INTPTR ecfHandle);

DllImport int ECF_CarregaComprovantesNaoFiscais(const INTPTR ecfHandle);

DllImport int ECF_CarregaFormasPagamento(const INTPTR ecfHandle);

DllImport int ECF_CarregaRelatoriosGerenciais(const INTPTR ecfHandle);

DllImport int ECF_ConfigBarras_GetAltura(const INTPTR ecfHandle, int* value);

DllImport int ECF_ConfigBarras_GetLarguraLinha(const INTPTR ecfHandle, int* value);

DllImport int ECF_ConfigBarras_GetMostrarCodigo(const INTPTR ecfHandle);

DllImport int ECF_ConfigBarras_SetAltura(const INTPTR ecfHandle, const int value);

DllImport int ECF_ConfigBarras_SetLarguraLinha(const INTPTR ecfHandle, const int value);

DllImport int ECF_ConfigBarras_SetMostrarCodigo(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_Consumidor_AtribuiConsumidor(const INTPTR ecfHandle, const PCHAR CPF_CNPJ, const PCHAR Nome, const PCHAR Endereco);

DllImport int ECF_Consumidor_GetAtribuido(const INTPTR ecfHandle);

DllImport int ECF_Consumidor_GetDocumento(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_Consumidor_GetEndereco(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_Consumidor_GetEnviado(const INTPTR ecfHandle);