jACBrFramework/jACBrFramework/src/jACBrFramework/interop/ECFInterop.java

package jACBrFramework.interop;

import com.sun.jna.Callback;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.NativeLibrary;
import com.sun.jna.Pointer;
import com.sun.jna.ptr.DoubleByReference;
import com.sun.jna.ptr.IntByReference;
import com.sun.jna.ptr.PointerByReference;
import java.nio.ByteBuffer;
import java.nio.DoubleBuffer;
import java.nio.IntBuffer;
/**
 * JNA Wrapper for library <b>jACBrFramework.ECFInterop</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> , <a href="http://rococoa.dev.java.net/">Rococoa</a>, or <a href="http://jna.dev.java.net/">JNA</a>.
 */
public interface ECFInterop extends InteropLib {

	public static final ECFInterop INSTANCE = (ECFInterop)Native.loadLibrary(ECFInterop.JNA_LIBRARY_NAME, ECFInterop.class);
	
	public interface AbreCupomCallback extends Callback {
		void apply(Pointer CPF_CNPJ, Pointer Nome, Pointer Endereco);
	};
	public interface BobinaAdicionaLinhasCallback extends Callback {
		void apply(Pointer linhas, Pointer operacao);
	};
	public interface ChangeEstadoCallback extends Callback {
		void apply(int EstadoAnterior, int EstadoAtual);
	};
	public interface ChequeEstadoCallback extends Callback {
		boolean apply(int EstadoAtual);
	};
	public interface EfetuaPagamentoCallback extends Callback {
		void apply(Pointer CodFormaPagto, double Valor, Pointer Observacao, boolean ImprimeVinculado);
	};
	public interface FechaCupomCallback extends Callback {
		void apply(Pointer Observacao, int IndiceBMP);
	};
	public interface GetKeyCallback extends Callback {
		Pointer apply();
	};
	public interface IntArgumentCallback extends Callback {
		void apply(int value);
	};
	public interface NoArgumentCallback extends Callback {
		void apply();
	};
	public interface OnErrorCallback extends Callback {
		boolean apply();
	};
	public interface OnErrorRelatorioCallback extends Callback {
		boolean apply(int Indice);
	};
	public interface OnMsgRetentarCallback extends Callback {
		boolean apply(Pointer Mensagem, Pointer Situacao);
	};
	public interface SangriaSuprimentoCallback extends Callback {
		void apply(double Valor, Pointer Obs, Pointer DescricaoCNF, Pointer DescricaoFPG);
	};
	public interface StringCallback extends Callback {
		void apply(Pointer Mensagem);
	};
	public interface SubtotalizaCupomCallback extends Callback {
		void apply(double DescontoAcrescimo, Pointer MensagemRodape);
	};
	public interface VendeItemCallback extends Callback {
		void apply(Pointer Codigo, Pointer Descricao, Pointer AliquotaICMS, double Qtd, double ValorUnitario, double ValorDescontoAcrescimo, Pointer Unidade, Pointer TipoDescontoAcrescimo, Pointer DescontoAcrescimo);
	};

	/**
	 * Original signature : <code>int ECF_AbreCupom(const INTPTR, const PCHAR, const PCHAR, const PCHAR, const BOOL)</code><br>
	 * <i>native declaration : line 112</i>
	 */
	int ECF_AbreCupom(int ecfHandle, ByteBuffer cpfCnpj, ByteBuffer nome, ByteBuffer endereco, boolean ModoPreVenda);

	/**
	 * Original signature : <code>int ECF_AbreCupomVinculado(const INTPTR, const PCHAR, const PCHAR, const double)</code><br>
	 * <i>native declaration : line 113</i>
	 */
	int ECF_AbreCupomVinculado(int ecfHandle, ByteBuffer coo, ByteBuffer codFormaPagto, double valor);

	/**
	 * Original signature : <code>int ECF_AbreCupomVinculadoCNF(const INTPTR, const PCHAR, const PCHAR, const PCHAR, const double)</code><br>
	 * <i>native declaration : line 114</i>
	 */
	int ECF_AbreCupomVinculadoCNF(int ecfHandle, ByteBuffer coo, ByteBuffer codFormaPagto, ByteBuffer codComprovanteNaoFiscal, double valor);
	/**
	 * Original signature : <code>int ECF_AbreGaveta(const INTPTR)</code><br>
	 * <i>native declaration : line 115</i>
	 */
	int ECF_AbreGaveta(int ecfHandle);

	/**
	 * Original signature : <code>int ECF_AbreNaoFiscal(const INTPTR, const PCHAR, const PCHAR, const PCHAR)</code><br>
	 * <i>native declaration : line 116</i>
	 */
	int ECF_AbreNaoFiscal(int ecfHandle, ByteBuffer cpfCnpj, ByteBuffer nome, ByteBuffer endereco);
	/**
	 * Original signature : <code>int ECF_AbreRelatorioGerencial(const INTPTR, const int)</code><br>
	 * <i>native declaration : line 117</i>
	 */
	int ECF_AbreRelatorioGerencial(int ecfHandle, int indice);

	/**
	 * Original signature : <code>int ECF_AchaCNFDescricao(const INTPTR, ComprovanteNaoFiscalRec*, const PCHAR, const BOOL, const BOOL)</code><br>
	 * <i>native declaration : line 118</i>
	 */
	int ECF_AchaCNFDescricao(int ecfHandle, ComprovanteNaoFiscalRec comprovanteNaoFiscal, ByteBuffer descricao, boolean busca, boolean ignore);

	/**
	 * Original signature : <code>int ECF_AchaFPGDescricao(const INTPTR, const PCHAR, const BOOL, const BOOL, FormaPagamentoRec*)</code><br>
	 * <i>native declaration : line 119</i>
	 */
	int ECF_AchaFPGDescricao(int ecfHandle, ByteBuffer descricao, boolean buscaexata, boolean ignorecase, FormaPagamentoRec formaPagamento);

	/**
	 * Original signature : <code>int ECF_AchaFPGIndice(const INTPTR, const PCHAR, FormaPagamentoRec*)</code><br>
	 * <i>native declaration : line 120</i>
	 */
	int ECF_AchaFPGIndice(int ecfHandle, ByteBuffer indice, FormaPagamentoRec formaPagamento);
	/**
	 * Original signature : <code>int ECF_AcharECF(const INTPTR, const BOOL, const BOOL, const int)</code><br>
	 * <i>native declaration : line 121</i>
	 */
	int ECF_AcharECF(int ecfHandle, boolean Modelo, boolean Porta, int TimeOut);
	/**
	 * Original signature : <code>int ECF_AcharPorta(const INTPTR, const int)</code><br>
	 * <i>native declaration : line 122</i>
	 */
	int ECF_AcharPorta(int ecfHandle, int TimeOut);

	/**
	 * Original signature : <code>int ECF_ArquivoMFD_DLL(const INTPTR, const double, const double, const PCHAR, const int[], const int, const int)</code><br>
	 * <i>native declaration : line 123</i>
	 */
	int ECF_ArquivoMFD_DLL(int ecfHandle, double DaTaInicial, double DaTaFinal, ByteBuffer Arquivo, int Documentos[], int QTD_DOC, int Finalidade);

	/**
	 * Original signature : <code>int ECF_ArquivoMFD_DLL_COO(const INTPTR, const int, const int, const PCHAR, const int[], const int, const int, const int)</code><br>
	 * <i>native declaration : line 124</i>
	 */
	int ECF_ArquivoMFD_DLL_COO(int ecfHandle, int COOInicial, int COOFinal, ByteBuffer Arquivo, int Documentos[], int QTD_DOC, int Finalidade, int TipoContador);
	/**
	 * Original signature : <code>int ECF_Ativar(const INTPTR)</code><br>
	 * <i>native declaration : line 125</i>
	 */
	int ECF_Ativar(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_CancelaCupom(const INTPTR)</code><br>
	 * <i>native declaration : line 126</i>
	 */
	int ECF_CancelaCupom(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_CancelaDescontoAcrescimoItem(const INTPTR, const int)</code><br>
	 * <i>native declaration : line 127</i>
	 */
	int ECF_CancelaDescontoAcrescimoItem(int ecfHandle, int numItem);
	/**
	 * Original signature : <code>int ECF_CancelaDescontoAcrescimoSubTotal(const INTPTR, const char)</code><br>
	 * <i>native declaration : line 128</i>
	 */
	int ECF_CancelaDescontoAcrescimoSubTotal(int ecfHandle, byte tipoAcrescimoDesconto);
	/**
	 * Original signature : <code>int ECF_CancelaImpressaoCheque(const INTPTR)</code><br>
	 * <i>native declaration : line 129</i>
	 */
	int ECF_CancelaImpressaoCheque(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_CancelaItemVendido(const INTPTR, const int)</code><br>
	 * <i>native declaration : line 130</i>
	 */
	int ECF_CancelaItemVendido(int ecfHandle, int numItem);
	/**
	 * Original signature : <code>int ECF_CancelaItemVendidoParcial(const INTPTR, const int, const double)</code><br>
	 * <i>native declaration : line 131</i>
	 */
	int ECF_CancelaItemVendidoParcial(int ecfHandle, int numItem, double quantidade);
	/**
	 * Original signature : <code>int ECF_CancelaNaoFiscal(const INTPTR)</code><br>
	 * <i>native declaration : line 132</i>
	 */
	int ECF_CancelaNaoFiscal(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_CarregaAliquotas(const INTPTR)</code><br>
	 * <i>native declaration : line 133</i>
	 */
	int ECF_CarregaAliquotas(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_CarregaComprovantesNaoFiscais(const INTPTR)</code><br>
	 * <i>native declaration : line 134</i>
	 */
	int ECF_CarregaComprovantesNaoFiscais(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_CarregaFormasPagamento(const INTPTR)</code><br>
	 * <i>native declaration : line 135</i>
	 */
	int ECF_CarregaFormasPagamento(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_CarregaRelatoriosGerenciais(const INTPTR)</code><br>
	 * <i>native declaration : line 136</i>
	 */
	int ECF_CarregaRelatoriosGerenciais(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_ConfigBarras_GetAltura(const INTPTR, int*)</code><br>
	 * <i>native declaration : line 137</i><br>
	 */
	int ECF_ConfigBarras_GetAltura(int ecfHandle, IntByReference value);

	/**
	 * Original signature : <code>int ECF_ConfigBarras_GetLarguraLinha(const INTPTR, int*)</code><br>
	 * <i>native declaration : line 138</i><br>
	 */
	int ECF_ConfigBarras_GetLarguraLinha(int ecfHandle, IntByReference value);

	/**
	 * Original signature : <code>int ECF_ConfigBarras_GetMostrarCodigo(const INTPTR)</code><br>
	 * <i>native declaration : line 139</i>
	 */
	int ECF_ConfigBarras_GetMostrarCodigo(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_ConfigBarras_SetAltura(const INTPTR, const int)</code><br>
	 * <i>native declaration : line 140</i>
	 */
	int ECF_ConfigBarras_SetAltura(int ecfHandle, int value);
	/**
	 * Original signature : <code>int ECF_ConfigBarras_SetLarguraLinha(const INTPTR, const int)</code><br>
	 * <i>native declaration : line 141</i>
	 */
	int ECF_ConfigBarras_SetLarguraLinha(int ecfHandle, int value);
	/**
	 * Original signature : <code>int ECF_ConfigBarras_SetMostrarCodigo(const INTPTR, const BOOL)</code><br>
	 * <i>native declaration : line 142</i>
	 */
	int ECF_ConfigBarras_SetMostrarCodigo(int ecfHandle, boolean value);

	/**
	 * Original signature : <code>int ECF_Consumidor_AtribuiConsumidor(const INTPTR, const PCHAR, const PCHAR, const PCHAR)</code><br>
	 * <i>native declaration : line 143</i>
	 */
	int ECF_Consumidor_AtribuiConsumidor(int ecfHandle, ByteBuffer CPF_CNPJ, ByteBuffer Nome, ByteBuffer Endereco);
	/**
	 * Original signature : <code>int ECF_Consumidor_GetAtribuido(const INTPTR)</code><br>
	 * <i>native declaration : line 144</i>
	 */
	int ECF_Consumidor_GetAtribuido(int ecfHandle);

	/**
	 * Original signature : <code>int ECF_Consumidor_GetDocumento(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 145</i>
	 */
	int ECF_Consumidor_GetDocumento(int ecfHandle, ByteBuffer buffer, int bufferLen);

	/**
	 * Original signature : <code>int ECF_Consumidor_GetEndereco(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 146</i>
	 */
	int ECF_Consumidor_GetEndereco(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_Consumidor_GetEnviado(const INTPTR)</code><br>
	 * <i>native declaration : line 147</i>
	 */
	int ECF_Consumidor_GetEnviado(int ecfHandle);
